crates/math-core/tests/snapshots/error_test__math_variant_switch_in_subscript.snap
---
source: crates/math-core/tests/error_test.rs
expression: "{x_\\bf x}"
---
Error: Math variant switch command found outside of sequence.
   ╭─[ <input>:1:4 ]
   │
 1 │ {x_\bf x}
   │    ─┬─  
   │     ╰─── math variant switch command as argument
───╯
